truncates introtext with HTML correctly skips preview if introtext has image in default template

--- a/templates/skin/experience/assets/css/style.css
+++ b/templates/skin/experience/assets/css/style.css
@@ -2,6 +2,7 @@
 .topic-text img.topic-content-preview-img {
     float: right;
     max-width: 300px;
+    margin-left: 10px;
 }
 
 .topic-content-introtext {
